--- a/src/pages/initial-landing/initialLanding.css
+++ b/src/pages/initial-landing/initialLanding.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap");
+
+body {
+  font-family: "Exo 2", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 @keyframes h1-animation {
   0% {
     font-size: 2000px;
@@ -6,6 +14,7 @@
   }
   100% {
     font-size: 6rem;
+    margin-top: -70px;
   }
 }
 
@@ -15,11 +24,11 @@
 
 @keyframes h1-animation2 {
   0% {
-    margin-top: 0;
+    margin-top: -70px;
     font-size: 6rem;
   }
   100% {
-    margin-top: -90px;
+    margin-top: -120px;
     font-size: 6rem;
   }
 }
@@ -30,7 +39,7 @@
 
 @keyframes h1-animation3 {
   0% {
-    margin-top: -90px;
+    margin-top: -120px;
     font-size: 6rem;
     opacity: 1;
   }
