--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -9,11 +9,12 @@
   width: 100%;
   height: 100%;
   line-height: 50px;
-  animation: slide 6s infinite;
   opacity: 0;
+  animation: slide 6s infinite;
 }
 
 .rotating-text:nth-child(1) {
+  opacity: 1; /* Make the first child visible initially */
   animation-delay: 1s;
 }
 
@@ -28,7 +29,7 @@
 @keyframes slide {
   0% {
     transform: translateY(100%);
-    opacity: 0;
+    opacity: 1;
   }
   10%,
   30% {
