--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
   @apply max-w-[1440px];
-  font-family: "Manrope", sans-serif;
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
 }
