--- a/src/pages/initial-landing/initialLanding.css
+++ b/src/pages/initial-landing/initialLanding.css
@@ -66,45 +66,6 @@ body {
 }
 
 /* ====================================================================================== */
-
-@keyframes h3-animate {
-  0% {
-    margin-top: -60px;
-    display: block;
-    opacity: 0;
-  }
-  50% {
-    transform: translateY(10px);
-    display: block;
-    opacity: 0.5;
-  }
-  100% {
-    margin-top: -40px;
-    display: block;
-    opacity: 1;
-  }
-}
-
-.h3-animate {
-  animation: h3-animate 3s ease-in-out forwards;
-}
-
-@keyframes h3-animate2 {
-  0% {
-    margin-top: -40px;
-    opacity: 1;
-  }
-  100% {
-    margin-top: -40px;
-    opacity: 0;
-    transform: translateY(-500px);
-  }
-}
-
-.h3-animate2 {
-  animation: h3-animate2 3s ease-in-out forwards;
-}
-
 @media (max-width: 768px) {
   .h3-animate,
   .h3-animate2 {
@@ -115,6 +76,34 @@ body {
 @media (min-width: 769px) {
   .h3-animate,
   .h3-animate2 {
-    font-size: 3rem;
+    font-size: 40px;
   }
+}
+
+@keyframes h3-animation {
+  0% {
+    margin-top: -10px;
+  }
+  100% {
+    margin-top: -20px;
+  }
+}
+
+.h3-animate {
+  animation: h3-animation 3s ease-in-out forwards;
+}
+
+@keyframes h3-animation2 {
+  0% {
+    margin-top: -20px;
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-550px);
+  }
+}
+
+.h3-animate2 {
+  animation: h3-animation2 3s ease-in-out forwards;
 }
