--- a/src/pages/notfound.css
+++ b/src/pages/notfound.css
@@ -1,3 +1,12 @@
+#redirect {
+  height: 100vh;
+}
+
+.overflow-y-scroll {
+  max-height: calc(100vh - 200px);
+  overflow-y: scroll;
+}
+
 @keyframes fade-in-bottom {
   0% {
     transform: translateY(500px);
